instance/common/kustomize/istio/health-check-vs.yaml
# TODO: Check this against just patching the backendconfig to the path
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: healthcheck-vs
  namespace: istio-system
spec:
  gateways:
    - istio-system/istio-ingressgateway
  hosts:
    - "*"
  http:
    - match:
        - headers:
            user-agent:
              prefix: GoogleHC
          method:
            exact: GET
          uri:
            exact: /
      rewrite:
        authority: istio-ingressgateway.istio-system.svc.cluster.local:15020
        uri: /healthz/ready
      route:
        - destination:
            host: istio-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 15020
